<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="submit">Submit</string>
    <string name="title">Conjunction (AND)</string>
    <string name="col_a">A</string>
    <string name="col_b">B</string>
    <string name="col_a_and_b">A ^ B</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="accepted_input">TF</string>
    <string name="correct">%d correct answers!</string>
</resources>